--- a/docker/quick_start/compose.yml
+++ b/docker/quick_start/compose.yml
@@ -21,10 +21,7 @@ services:
       retries: 5
 
   qs-mosaicod:
-    build:
-      context: ../../mosaicod
-      dockerfile: ../docker/dockerfiles/Dockerfile.mosaicod
-    image: mosaicolabs/mosaicod
+    image: ghcr.io/mosaico-labs/mosaicod
     container_name: mosaicod
     networks:
       - mosaico-qs
