-added the documentation for the ros bridge. To be redesigned - minor doc changes/fixes

--- a/doc/mkdocs.yml
+++ b/doc/mkdocs.yml
@@ -49,6 +49,7 @@ nav:
     - SDK/query.md
     - Bridges:
         - SDK/bridges/ml.md
+        - SDK/bridges/ros.md
     - API Reference:
       - SDK/API_reference/comm.md
       - SDK/API_reference/ml.md
