--- a/doc/mkdocs.yml
+++ b/doc/mkdocs.yml
@@ -56,11 +56,12 @@ nav:
       - SDK/API_reference/comm.md
       - SDK/API_reference/enum.md
       - SDK/API_reference/handlers.md
+      - SDK/API_reference/query.md
       - Models:
         - SDK/API_reference/models/base.md
-        - SDK/API_reference/models/data.md
+        - SDK/API_reference/models/data_types.md
+        - SDK/API_reference/models/geometry.md
         - SDK/API_reference/models/platform.md
-        - SDK/API_reference/models/query.md
       - SDK/API_reference/ml.md
   - Daemon:
     - daemon/index.md
