--- a/mosaicod/tests/Cargo.toml
+++ b/mosaicod/tests/Cargo.toml
@@ -24,3 +24,5 @@ serde_json = { workspace = true }
 serde = { workspace = true }
 uuid = { workspace = true }
 rand = { workspace = true }
+futures = { workspace = true }
+arrow = { workspace = true }
