Refactor query builders/expressions and update SDK API docs - moved `_QueryCombinator` from expressions.py to builders.py. - Expand and clarify docstrings, examples and type hints across builders.py, expressions.py and protocols.py. - Restructure `_QueryExpression` and specialized subclasses to improve serialization and docs. - Improve `QueryableProtocol` method docs and return typing. - Update MkDocs navigation and API reference: add query builders/internal and `models/sensors` pages, remove old query.md, and normalize capitalization in several API docs.

--- a/doc/mkdocs.yml
+++ b/doc/mkdocs.yml
@@ -56,7 +56,9 @@ nav:
       - SDK/API_reference/comm.md
       - SDK/API_reference/enum.md
       - SDK/API_reference/handlers.md
-      - SDK/API_reference/query.md
+      - Query Module:
+        - SDK/API_reference/query/builders.md
+        - SDK/API_reference/query/internal.md
       - Models:
         - SDK/API_reference/models/base.md
         - SDK/API_reference/models/data_types.md
