--- a/doc/mkdocs.yml
+++ b/doc/mkdocs.yml
@@ -64,6 +64,7 @@ nav:
         - SDK/API_reference/models/data_types.md
         - SDK/API_reference/models/geometry.md
         - SDK/API_reference/models/platform.md
+        - SDK/API_reference/models/sensors.md
       - SDK/API_reference/ml.md
   - Daemon:
     - daemon/index.md
