Enhance Sequence and Topic Handling in Mosaico SDK
- Updated `SequenceWriter` to include detailed examples for creating sequences and topics, improving documentation clarity.
- Introduced new properties in `TopicHandler` for better metadata access, including `name`, `sequence_name`, `created_datetime`, and `total_size_bytes`.
- Refined `TopicDataStreamer` to ensure proper resource management and added validation for open status before operations.
- Enhanced `TopicWriter` documentation with usage examples for pushing data.
- Improved query response classes with additional metadata and clearer documentation.
- Added tests for multiple calls to data streamers to ensure proper resource handling and error management.
- General code cleanup and documentation improvements across various modules for better maintainability and usability.
- Privated handlers class methods that are not public API

--- a/doc/mkdocs.yml
+++ b/doc/mkdocs.yml
@@ -37,6 +37,7 @@ plugins:
             show_source: false
             relative_crossrefs: true
             signature_crossrefs: true
+            members_order: source
 
 nav:
   - Mosaico: index.md
@@ -59,6 +60,7 @@ nav:
       - Query Module:
         - SDK/API_reference/query/builders.md
         - SDK/API_reference/query/internal.md
+        - SDK/API_reference/query/response.md
       - Models:
         - SDK/API_reference/models/base.md
         - SDK/API_reference/models/data_types.md
