Refactor ROS Adapters and Registry for Enhanced Flexibility and Maintainability  - Removed the RobotJointAdapter from its previous location and integrated it into the sensor_msgs.py file, ensuring better organization and accessibility. - Introduced a GenericStdAdapter class to dynamically generate adapters for standard ROS message types, reducing redundancy and improving maintainability. - Enhanced the ROSTypeRegistry to support context-aware registration of custom ROS message definitions, allowing for better management of version-specific schemas. - Updated various adapter classes (CameraInfoAdapter, NavSatStatusAdapter, etc.) to include detailed docstrings and examples for improved documentation and usability. - Added tests to verify the handling of schema mismatches in Serializable classes, ensuring robustness in the ontology type validation process.

--- a/doc/mkdocs.yml
+++ b/doc/mkdocs.yml
@@ -74,7 +74,17 @@ nav:
         - SDK/API_reference/models/geometry.md
         - SDK/API_reference/models/platform.md
         - SDK/API_reference/models/sensors.md
-      - SDK/API_reference/ml.md
+      - Bridges:
+        - SDK/API_reference/bridges/ml.md
+        - ROS-Bridge:
+          - SDK/API_reference/bridges/ros/ros.md
+          - Adapters:
+            - SDK/API_reference/bridges/ros/adapters/base.md
+            - SDK/API_reference/bridges/ros/adapters/std_msgs.md
+            - SDK/API_reference/bridges/ros/adapters/geometry_msgs.md
+            - SDK/API_reference/bridges/ros/adapters/sensor_msgs.md
+            - SDK/API_reference/bridges/ros/adapters/nav_msgs.md
+            - SDK/API_reference/bridges/ros/adapters/tf2_msgs.md
   - Daemon:
     - daemon/index.md
     - daemon/control.md
