--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -19,6 +19,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: 3.x
+
       - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV 
       - uses: actions/cache@v4
         with:
@@ -26,5 +27,8 @@ jobs:
           path: ~/.cache 
           restore-keys: |
             mkdocs-material-
+
       - run: pip install mkdocs-material 
+
       - run: mkdocs gh-deploy --force
+          working-directory: ./docs 
