--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -31,4 +31,4 @@ jobs:
       - run: pip install mkdocs-material 
 
       - run: mkdocs gh-deploy --force
-        working-directory: ./docs 
+        working-directory: ./doc
