--- a/doc/mkdocs.yml
+++ b/doc/mkdocs.yml
@@ -43,11 +43,9 @@ plugins:
 
 nav:
   - Mosaico: index.md
-  - Getting Started:
-    - getting_started/mosaicod.md
-    - getting_started/python-sdk.md
-  - Python SDK:
+  - SDK:
     - SDK/index.md
+    - SDK/install.md
     - SDK/client.md
     - SDK/ontology.md
     - Data Handling:
@@ -58,39 +56,42 @@ nav:
     - Bridges:
         - SDK/bridges/ml.md
         - SDK/bridges/ros.md
-    - Python API Reference:
-      - SDK/API_reference/comm.md
-      - SDK/API_reference/enum.md
-      - Data Handling:
-        - SDK/API_reference/handlers/reading.md
-        - SDK/API_reference/handlers/writing.md
-      - Query Module:
-        - SDK/API_reference/query/builders.md
-        - SDK/API_reference/query/internal.md
-        - SDK/API_reference/query/response.md
-      - Models:
-        - SDK/API_reference/models/base.md
-        - SDK/API_reference/models/data_types.md
-        - SDK/API_reference/models/geometry.md
-        - SDK/API_reference/models/platform.md
-        - SDK/API_reference/models/sensors.md
-      - Bridges:
-        - SDK/API_reference/bridges/ml.md
-        - ROS-Bridge:
-          - SDK/API_reference/bridges/ros/ros.md
-          - Adapters:
-            - SDK/API_reference/bridges/ros/adapters/base.md
-            - SDK/API_reference/bridges/ros/adapters/std_msgs.md
-            - SDK/API_reference/bridges/ros/adapters/geometry_msgs.md
-            - SDK/API_reference/bridges/ros/adapters/sensor_msgs.md
-            - SDK/API_reference/bridges/ros/adapters/nav_msgs.md
-            - SDK/API_reference/bridges/ros/adapters/tf2_msgs.md
+    # - Python API Reference:
+    #   - SDK/API_reference/comm.md
+    #   - SDK/API_reference/enum.md
+    #   - Data Handling:
+    #     - SDK/API_reference/handlers/reading.md
+    #     - SDK/API_reference/handlers/writing.md
+    #   - Query Module:
+    #     - SDK/API_reference/query/builders.md
+    #     - SDK/API_reference/query/internal.md
+    #     - SDK/API_reference/query/response.md
+    #   - Models:
+    #     - SDK/API_reference/models/base.md
+    #     - SDK/API_reference/models/data_types.md
+    #     - SDK/API_reference/models/geometry.md
+    #     - SDK/API_reference/models/platform.md
+    #     - SDK/API_reference/models/sensors.md
+    #   - Bridges:
+    #     - SDK/API_reference/bridges/ml.md
+    #     - ROS-Bridge:
+    #       - SDK/API_reference/bridges/ros/ros.md
+    #       - Adapters:
+    #         - SDK/API_reference/bridges/ros/adapters/base.md
+    #         - SDK/API_reference/bridges/ros/adapters/std_msgs.md
+    #         - SDK/API_reference/bridges/ros/adapters/geometry_msgs.md
+    #         - SDK/API_reference/bridges/ros/adapters/sensor_msgs.md
+    #         - SDK/API_reference/bridges/ros/adapters/nav_msgs.md
+    #         - SDK/API_reference/bridges/ros/adapters/tf2_msgs.md
   - Daemon:
     - daemon/index.md
+    - daemon/install.md
     - daemon/control.md
     - daemon/ingestion.md
     - daemon/query.md
     - daemon/retrieval.md
+  - Development:
+    - development/release_cycle.md
 
 extra_css:
   - stylesheets/extra.css
@@ -107,7 +108,7 @@ theme:
   palette: 
     scheme: slate
     primary: custom
-    accent: light blue
+    accent: custom
   features:
     - content.code.copy
     - content.code.annotate
