--- a/doc/pyproject.toml
+++ b/doc/pyproject.toml
@@ -10,7 +10,8 @@ requires-python = ">=3.13"
 dependencies = [
     "mkdocs (>=1.6.1,<2.0.0)",
     "mkdocs-material (>=9.7.1,<10.0.0)",
-    "mkdocstrings[python] (>=1.0.2,<2.0.0)"
+    "mkdocstrings[python] (>=1.0.2,<2.0.0)",
+    "ruff (>=0.15.1,<0.16.0)"
 ]
 
 [tool.poetry]
