--- a/docker/dockerfiles/Dockerfile.mosaicod
+++ b/docker/dockerfiles/Dockerfile.mosaicod
@@ -13,6 +13,7 @@ RUN apt-get update && \
 COPY Cargo.toml Cargo.lock ./
 COPY crates ./crates
 COPY bin ./bin
+COPY tests ./tests
 COPY .sqlx ./.sqlx
 
 RUN SQLX_OFFLINE=true cargo build --profile docker
