--- a/docker/dockerfiles/Dockerfile.mosaicod
+++ b/docker/dockerfiles/Dockerfile.mosaicod
@@ -16,7 +16,7 @@ COPY bin ./bin
 COPY tests ./tests
 COPY .sqlx ./.sqlx
 
-RUN SQLX_OFFLINE=true cargo build --profile docker
+RUN SQLX_OFFLINE=true cargo build --bin mosaicod --profile docker
 
 # RUNTIME STAGE
 FROM gcr.io/distroless/cc-debian11
