--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -19,7 +19,7 @@ jobs:
         include:
           - runner: ubuntu-latest
             platform: linux/amd64
-          - runner: ubuntu-24.04-arm64  
+          - runner: ubuntu-24.04-arm
             platform: linux/arm64
 
     steps:
